--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 html,
 body,
 :root{
+  width: 100%;
   height: 100%;
 }
 
@@ -30,11 +31,34 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-  font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+@font-face {
+  font-family: 'sfProDisplay';
+  src: url('/fonts/SF-Pro-Display-Regular.otf') format('opentype');
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'sfProDisplaySemibold';
+  src: url('/fonts/SF-Pro-Display-Semibold.otf') format('opentype');
+  font-weight: semibold;
+}
+
+@font-face {
+  font-family: 'sfProText';
+  src: url('/fonts/SF-Pro-Text-Regular.otf') format('opentype');
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'sfProTextLight';
+  src: url('/fonts/SF-Pro-Text-Light.otf') format('opentype');
+  font-weight: light;
 }
