--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,12 +64,9 @@ body {
 }
 
 .scrollbar-hide {
-  /* Hide scrollbar for Chrome, Safari, and Opera */
   &::-webkit-scrollbar {
     display: none;
   }
-
-  /* Hide scrollbar for IE and Edge */
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
